Changed order of modules and title of ads module

--- a/modules.html
+++ b/modules.html
@@ -113,6 +113,107 @@
               <div class="carousel-item active">
                 <div class="card-deck">
 
+                  <!-- Healthy Social Media Habits -->
+                  <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
+                    <div class="card" style="width: 18rem;">
+                      <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
+                        <div class="container cardImgContainer">
+                          <img class="card-img-top" id="heightReference" src="/img/smhabits.png" alt="Healthy Social Media Habits">
+                          <div class="card-img-overlay">
+                            <span class="card-title moduleCardTitle">
+                              Healthy Social Media Habits
+                            </span>
+                          </div>
+                        </div>
+                      </a>
+                      <div class="card-body">
+                        <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
+                          This module
+                        </a>
+                        <span class="card-text">
+                          teaches ...
+                        </span>
+                        <br>
+                        <br>
+                        <span class="card-text">
+                          <span class="card-text-csAlignment">
+                            Aligned with Common Sense Education's Digital
+                            Citizenship lesson:   Link Name.
+                            <a href="" target="_blank">
+                              Learn more...
+                            </a>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Targeted Advertising -->
+                  <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
+                    <div class="card" style="width: 18rem;">
+                      <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
+                        <div class="container cardImgContainer">
+                          <img class="card-img-top" id="heightReference" src="/img/targetedads.png" alt="Targeted Advertising">
+                          <div class="card-img-overlay">
+                            <span class="card-title moduleCardTitle">Ads on Social Media</span>
+                          </div>
+                        </div>
+                      </a>
+                      <div class="card-body">
+                        <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
+                          This module
+                        </a>
+                        <span class="card-text">
+                          teaches ...
+                        </span>
+                        <br>
+                        <br>
+                        <span class="card-text-csAlignment">
+                          Aligned with Common Sense Education's Digital
+                          Citizenship lesson: Link Name.
+                          <a href="" target="_blank">
+                            Learn more...
+                          </a>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+
+
+
+                  <!-- Scams and Phishing -->
+                  <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
+                    <div class="card" style="width: 18rem;">
+                      <a href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
+                        <div class="container cardImgContainer">
+                          <img class="card-img-top" id="heightReference" src="/img/phishing.png" alt="Phishing">
+                          <div class="card-img-overlay">
+                            <span class="card-title moduleCardTitle">Scams and Phishing</span>
+                          </div>
+                        </div>
+                      </a>
+                      <div class="card-body">
+                        <a href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
+                          This module
+                        </a>
+                        <span class="card-text">
+                          teaches ...
+                        </span>
+                        <br>
+                        <br>
+                        <span class="card-text">
+                          <span class="card-text-csAlignment">
+                            Aligned with Common Sense Education's Digital
+                            Citizenship lesson: Link name.
+                            <a href="" target="_blank">
+                              Learn more...
+                            </a>
+                          </span>
+                        </span>
+                      </div>
+                    </div>
+                  </div>
+
                   <!-- How To Be An Upstander -->
                   <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
                     <div class="card" style="width: 18rem;">
@@ -219,6 +320,13 @@
                     </div>
                   </div>
 
+                </div>
+              </div>
+
+              <!-- Carousel Page 2 -->
+              <div class="carousel-item">
+                <div class="card-deck">
+
                   <!-- Online Identities -->
                   <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
                     <div class="card" style="width: 18rem;">
@@ -323,111 +431,7 @@
                       </div>
                     </div>
                   </div>
-                </div>
-              </div>
 
-              <!-- Carousel Page 2 -->
-              <div class="carousel-item">
-                <div class="card-deck">
-
-                  <!-- Targeted Advertising -->
-                  <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
-                    <div class="card" style="width: 18rem;">
-                      <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
-                        <div class="container cardImgContainer">
-                          <img class="card-img-top" id="heightReference" src="/img/targetedads.png" alt="Targeted Advertising">
-                          <div class="card-img-overlay">
-                            <span class="card-title moduleCardTitle">Targeted Advertising</span>
-                          </div>
-                        </div>
-                      </a>
-                      <div class="card-body">
-                        <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
-                          This module
-                        </a>
-                        <span class="card-text">
-                          teaches ...
-                        </span>
-                        <br>
-                        <br>
-                        <span class="card-text-csAlignment">
-                          Aligned with Common Sense Education's Digital
-                          Citizenship lesson: Link Name.
-                          <a href="" target="_blank">
-                            Learn more...
-                          </a>
-                        </span>
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- Healthy Social Media Habits -->
-                  <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
-                    <div class="card" style="width: 18rem;">
-                      <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
-                        <div class="container cardImgContainer">
-                          <img class="card-img-top" id="heightReference" src="/img/smhabits.png" alt="Healthy Social Media Habits">
-                          <div class="card-img-overlay">
-                            <span class="card-title moduleCardTitle">
-                              Healthy Social Media Habits
-                            </span>
-                          </div>
-                        </div>
-                      </a>
-                      <div class="card-body">
-                        <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
-                          This module
-                        </a>
-                        <span class="card-text">
-                          teaches ...
-                        </span>
-                        <br>
-                        <br>
-                        <span class="card-text">
-                          <span class="card-text-csAlignment">
-                            Aligned with Common Sense Education's Digital
-                            Citizenship lesson:   Link Name.
-                            <a href="" target="_blank">
-                              Learn more...
-                            </a>
-                          </span>
-                        </span>
-                      </div>
-                    </div>
-                  </div>
-
-                  <!-- Scams and Phishing -->
-                  <div class="col-md-6 col-lg-4 d-flex justify-content-center moduleColumn">
-                    <div class="card" style="width: 18rem;">
-                      <a href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
-                        <div class="container cardImgContainer">
-                          <img class="card-img-top" id="heightReference" src="/img/phishing.png" alt="Phishing">
-                          <div class="card-img-overlay">
-                            <span class="card-title moduleCardTitle">Scams and Phishing</span>
-                          </div>
-                        </div>
-                      </a>
-                      <div class="card-body">
-                        <a href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
-                          This module
-                        </a>
-                        <span class="card-text">
-                          teaches ...
-                        </span>
-                        <br>
-                        <br>
-                        <span class="card-text">
-                          <span class="card-text-csAlignment">
-                            Aligned with Common Sense Education's Digital
-                            Citizenship lesson: Link name.
-                            <a href="" target="_blank">
-                              Learn more...
-                            </a>
-                          </span>
-                        </span>
-                      </div>
-                    </div>
-                  </div>
 
                 </div>
               </div>
@@ -437,6 +441,101 @@
       </div>
 
       <!-- mobile view, no carousel -->
+
+      <!-- Healthy Social Media Habits -->
+      <div class="row paddedTop d-sm-block d-md-none">
+        <div class="card" style="width: 18rem;">
+          <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
+            <div class="container cardImgContainer">
+              <img class="card-img-top" id="heightReference" src="/img/smhabits.png" alt="Healthy Social Media Habits">
+              <div class="card-img-overlay">
+                <span class="card-title moduleCardTitle">
+                  Healthy Social Media Habits
+                </span>
+              </div>
+            </div>
+          </a>
+          <div class="card-body">
+            <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
+              This module
+            </a>
+            <span class="card-text">
+              teaches ...
+            </span>
+            <br>
+            <br>
+            <span class="card-text-csAlignment">
+              Aligned with Common Sense Education's Digital
+              Citizenship lesson: Link name.
+              <a href="" target="_blank">
+                Learn more...
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Targeted Advertising -->
+      <div class="row paddedTop d-sm-block d-md-none">
+        <div class="card" style="width: 18rem;">
+          <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
+            <div class="container cardImgContainer">
+              <img class="card-img-top" id="heightReference" src="/img/targetedads.png" alt="Targeted Advertising">
+              <div class="card-img-overlay">
+                <span class="card-title moduleCardTitle">Ads on Social Media</span>
+              </div>
+            </div>
+          </a>
+          <div class="card-body">
+            <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
+              This module
+            </a>
+            <span class="card-text">
+              teaches ...
+            </span>
+            <br>
+            <br>
+            <span class="card-text-csAlignment">
+              Aligned with Common Sense Education's Digital
+              Citizenship lesson: Link name.
+              <a href="" target="_blank">
+                Learn more...
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
+
+      <!-- Scams and Phishing -->
+      <div class="row paddedTop d-sm-block d-md-none">
+        <div class="card" style="width: 18rem;">
+          <a href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
+            <div class="container cardImgContainer">
+              <img class="card-img-top" id="heightReference" src="/img/phishing.png" alt="Phishing">
+              <div class="card-img-overlay">
+                <span class="card-title moduleCardTitle">Scams and Phishing</span>
+              </div>
+            </div>
+          </a>
+          <div class="card-body">
+            <a href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
+              This module
+            </a>
+            <span class="card-text">
+              teaches ...
+            </span>
+            <br>
+            <br>
+            <span class="card-text-csAlignment">
+              Aligned with Common Sense Education's Digital
+              Citizenship lesson: Link name.
+              <a href="" target="_blank">
+                Learn more...
+              </a>
+            </span>
+          </div>
+        </div>
+      </div>
 
       <!-- How to Be an Upstander -->
       <div class="row d-sm-block d-md-none">
@@ -646,102 +745,6 @@
           </div>
         </div>
       </div>
-
-      <!-- Targeted Advertising -->
-      <div class="row paddedTop d-sm-block d-md-none">
-        <div class="card" style="width: 18rem;">
-          <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
-            <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/targetedads.png" alt="Targeted Advertising">
-              <div class="card-img-overlay">
-                <span class="card-title moduleCardTitle">Targeted Advertising</span>
-              </div>
-            </div>
-          </a>
-          <div class="card-body">
-            <a href="https://app.socialmediatestdrive.org/intro/targeted" class="card-text" target="_none">
-              This module
-            </a>
-            <span class="card-text">
-              teaches ...
-            </span>
-            <br>
-            <br>
-            <span class="card-text-csAlignment">
-              Aligned with Common Sense Education's Digital
-              Citizenship lesson: Link name.
-              <a href="" target="_blank">
-                Learn more...
-              </a>
-            </span>
-          </div>
-        </div>
-      </div>
-
-      <!-- Healthy Social Media Habits -->
-      <div class="row paddedTop d-sm-block d-md-none">
-        <div class="card" style="width: 18rem;">
-          <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
-            <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/smhabits.png" alt="Healthy Social Media Habits">
-              <div class="card-img-overlay">
-                <span class="card-title moduleCardTitle">
-                  Healthy Social Media Habits
-                </span>
-              </div>
-            </div>
-          </a>
-          <div class="card-body">
-            <a href="https://app.socialmediatestdrive.org/intro/habits" class="card-text" target="_none">
-              This module
-            </a>
-            <span class="card-text">
-              teaches ...
-            </span>
-            <br>
-            <br>
-            <span class="card-text-csAlignment">
-              Aligned with Common Sense Education's Digital
-              Citizenship lesson: Link name.
-              <a href="" target="_blank">
-                Learn more...
-              </a>
-            </span>
-          </div>
-        </div>
-      </div>
-
-      <!-- Scams and Phishing -->
-      <div class="row paddedTop d-sm-block d-md-none">
-        <div class="card" style="width: 18rem;">
-          <a href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
-            <div class="container cardImgContainer">
-              <img class="card-img-top" id="heightReference" src="/img/phishing.png" alt="Phishing">
-              <div class="card-img-overlay">
-                <span class="card-title moduleCardTitle">Scams and Phishing</span>
-              </div>
-            </div>
-          </a>
-          <div class="card-body">
-            <a href="https://app.socialmediatestdrive.org/intro/phishing" class="card-text" target="_none">
-              This module
-            </a>
-            <span class="card-text">
-              teaches ...
-            </span>
-            <br>
-            <br>
-            <span class="card-text-csAlignment">
-              Aligned with Common Sense Education's Digital
-              Citizenship lesson: Link name.
-              <a href="" target="_blank">
-                Learn more...
-              </a>
-            </span>
-          </div>
-        </div>
-      </div>
-
 
     <!-- Contact us section -->
 
