--- a/faq.html
+++ b/faq.html
@@ -58,7 +58,7 @@
   </header>
 
   <main>
-    <div class='container'>
+    <div class='container-fluid'>
 
       <!-- Title -->
       <div class="row justify-content-center" style="padding-top:3em; padding-bottom:15px;">
@@ -66,39 +66,40 @@
           <h1> Got Questions? </h1>
         </div>
       </div>
-
-      <!-- Subject Tabs -->
-      <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist" style="border-bottom: 1px solid #DCDCDC;">
-        <!-- Tab 1 -->
-        <li class="nav-item">
-          <a class="nav-link active" id="pills-home-tab" data-toggle="pill"
-          href="#pills-home" role="tab" aria-controls="pills-home"
-          aria-selected="true">
-            General
-          </a>
-        </li>
-        <!-- Tab 2 -->
-        <li class="nav-item">
-          <a class="nav-link" id="pills-profile-tab" data-toggle="pill"
-          href="#pills-profile" role="tab" aria-controls="pills-profile"
-          aria-selected="false">
-            Educators
-          </a>
-        </li>
-        <!-- Tab 3 -->
-        <li class="nav-item">
-          <a class="nav-link" id="pills-contact-tab" data-toggle="pill"
-          href="#pills-contact" role="tab" aria-controls="pills-contact"
-          aria-selected="false">
-            Parents
-          </a>
-        </li>
-      </ul>
+      <div class="row navPillRow">
+        <!-- Subject Tabs -->
+        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+          <!-- Tab 1 -->
+          <li class="nav-item">
+            <a class="nav-link active" id="pills-home-tab" data-toggle="pill"
+            href="#pills-home" role="tab" aria-controls="pills-home"
+            aria-selected="true">
+              General
+            </a>
+          </li>
+          <!-- Tab 2 -->
+          <li class="nav-item">
+            <a class="nav-link" id="pills-profile-tab" data-toggle="pill"
+            href="#pills-profile" role="tab" aria-controls="pills-profile"
+            aria-selected="false">
+              Educators
+            </a>
+          </li>
+          <!-- Tab 3 -->
+          <li class="nav-item">
+            <a class="nav-link" id="pills-contact-tab" data-toggle="pill"
+            href="#pills-contact" role="tab" aria-controls="pills-contact"
+            aria-selected="false">
+              Parents
+            </a>
+          </li>
+        </ul>
+      </div>
       <div class="tab-content" id="pills-tabContent">
 
         <!-- Tab 1 Content -->
         <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-          <div class="container">
+          <div class="container-fluid questionContainer">
 
             <!-- First row, tab 1 -->
             <div class="row paddedRow">
@@ -212,7 +213,7 @@
 
         <!-- Tab 2 Content -->
         <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-          <div class="container">
+          <div class="container-fluid questionContainer">
 
             <!-- First row, tab 2 -->
             <div class="row paddedRow">
@@ -295,7 +296,7 @@
 
         <!-- Tab 3 -->
         <div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
-          <div class="container">
+          <div class="container-fluid questionContainer">
 
             <!-- First row, tab 3 -->
             <div class="row paddedRow">
