--- a/for_educators.html
+++ b/for_educators.html
@@ -56,7 +56,7 @@
     </nav>
   </header>
   <main>
-    <div class='container'>
+    <div class='container-fluid'>
 
       <!-- Content Row 1 -->
       <div class="row align-items-center paddedRow">
