--- a/for_parents.html
+++ b/for_parents.html
@@ -57,7 +57,7 @@
   </header>
 
   <main>
-  <div class='container'>
+  <div class='container-fluid'>
 
     <!-- Content Row 1 -->
     <div class="row align-items-center paddedRow">
