--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   </header>
 
   <main>
-    <div class="section1 container">
+    <div class="section1 container-fluid">
 
       <!-- Top Content Row -->
       <div class="row paddedRow align-items-center">
