--- a/modules.html
+++ b/modules.html
@@ -57,7 +57,7 @@
   </header>
 
   <main>
-    <div class='container'>
+    <div class='container-fluid'>
       <!-- Title -->
       <div class="row justify-content-center" style="padding-top:3em;">
         <div class="col-lg-8 text-center">
@@ -104,7 +104,7 @@
 
       <!-- Carousel, tablet and fullscreen view -->
       <div class="row d-none d-md-block" style="min-height:1024px;">
-        <div class="col">
+        <div class="col carouselColumn">
           <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="false" data-wrap="false">
 
             <div class="carousel-inner">
