fixed links to media images in press page

--- a/press.html
+++ b/press.html
@@ -82,7 +82,7 @@
         </div>
         <div class='col-lg-5 pressLogoContainer d-flex
         justify-content-center align-items-center'>
-          <img class="pressLogo" src="img/press:newswise.png">
+          <img class="pressLogo" src="img/press/newswise.png">
         </div>
       </div>
 
@@ -105,7 +105,7 @@
         </div>
         <div class='col-lg-5 pressLogoContainer d-flex
         justify-content-center align-items-center'>
-          <img class="pressLogo" src="img/press:cornellchronicle.png">
+          <img class="pressLogo" src="img/press/cornellchronicle.png">
         </div>
       </div>
 
@@ -127,7 +127,7 @@
         </div>
         <div class='col-lg-5 pressLogoContainer d-flex
         justify-content-center align-items-center'>
-          <img class="pressLogo" src="img/press:psychtoday.png">
+          <img class="pressLogo" src="img/press/psychtoday.png">
         </div>
       </div>
 
