Deleted unused files, css cleanup, new favicon

--- a/modules.html
+++ b/modules.html
@@ -4,22 +4,23 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
-    <link rel="stylesheet" type="text/css" href="styles/modules.css" media="all">
-    <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
-    <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+  <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/modules.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
+  <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145467622-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-      gtag('config', 'UA-145467622-3');
-    </script>
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
-    <title>TestDrive</title>
+    gtag('config', 'UA-145467622-3');
+  </script>
+  <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+  <title>TestDrive</title>
 </head>
 <body>
   <header>
