--- a/press.html
+++ b/press.html
@@ -40,7 +40,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="modules.html">Lessons</a>
+            <a class="nav-link" href="modules.html">Modules</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="for_educators.html">For Educators</a>
@@ -140,7 +140,7 @@
     <div class="container-fluid">
       <div class="row align-items-center footerRow">
         <div class="col-auto mr-auto">
-          <p class="footerLeftItem">Copyright&copy 2019 Social Media TestDrive</p>
+          <p class="footerLeftItem">Copyright &copy 2020 Social Media TestDrive</p>
         </div>
         <div class="col-auto">
           <a href="team.html" class="footer-link">Team</a>
