Corrected alternating item order on mobile

--- a/for_educators.html
+++ b/for_educators.html
@@ -91,10 +91,10 @@
 
       <!-- Content Row 2 -->
       <div class="row align-items-center paddedRow">
-        <div class="col-md-6">
+        <div class="col-md-6 order-2 order-md-1">
           <img class="educators_image" src="img/educators_2.png">
         </div>
-        <div class='col-md-6'>
+        <div class='col-md-6 order-1 order-md-2'>
           <h1>Social media education for today’s youth</h1>
           <h4>
             TestDrive provides a simulated experience of realistic digital
