--- a/for_parents.html
+++ b/for_parents.html
@@ -90,10 +90,10 @@
 
     <!-- Content Row 2 -->
     <div class="row align-items-center paddedRow">
-      <div class="col-md-6">
+      <div class="col-md-6 order-2 order-md-1">
         <img class="parents_2" src="img/parents_2.png">
       </div>
-      <div class='col-md-6'>
+      <div class='col-md-6 order-1 order-md-2'>
         <h1>Teach your children about social media, risk-free.</h1>
         <h4>
           Each TestDrive module teaches a set of digital citizenship concepts
