--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
 
       <!-- Content Row 2 -->
       <div class="row align-items-center paddedRow">
-        <div class="col-md-6">
+        <div class="col-md-6 order-2 order-md-1">
           <img class="margined-right home_product2" src="img/home_3.png">
         </div>
-        <div class='col-md-6'>
+        <div class='col-md-6 order-1 order-md-2'>
           <h1>
             Prepare youth for the online world
           </h1>
@@ -202,10 +202,10 @@
 
       <!-- Content Row 4 -->
       <div class="row align-items-center paddedRow">
-        <div class="col-md-6">
+        <div class="col-md-6 order-2 order-md-1">
           <img class="home_parents" src="img/home_parents.svg">
         </div>
-        <div class='col-md-6'>
+        <div class='col-md-6 order-1 order-md-2'>
           <h1>
             Use TestDrive at home, too
           </h1>
