FAQ language update

--- a/faq.html
+++ b/faq.html
@@ -150,9 +150,10 @@
               <div class="col-md-6 leftSide">
                 <h3 class="questionTitle">Who is Social Media TestDrive for?</h3>
                 <p>
-                  Social Media TestDrive is for middle school-aged youth (ages 9–13) who are
-                  new to or not yet engaged with social media, but may enter
-                  into the social media world in the near future.
+                  TestDrive is most effective for new social media users or
+                  those who are likely to enter into the social media world in
+                  the near future. Our target audience is middle school-aged
+                  youth, but we welcome everyone to explore it.
                 </p>
                 <p>
                   Children at these ages are aware of and likely becoming
