Removed periods on titles in parents page

--- a/for_parents.html
+++ b/for_parents.html
@@ -98,7 +98,7 @@
         <img class="parents_2" src="img/parents_2.png">
       </div>
       <div class='col-md-6 order-1 order-md-2'>
-        <h1>Teach your children about social media, risk-free.</h1>
+        <h1>Teach your children about social media, risk-free</h1>
         <h4>
           Each Social Media TestDrive module teaches a set of digital citizenship concepts
           within a safe and protected platform. Young people can practice
@@ -111,7 +111,7 @@
     <!-- Content Row 3 -->
     <div class="row align-items-center paddedRow">
       <div class="col-md-6">
-        <h1>We care about your child’s privacy.</h1>
+        <h1>We care about your child’s privacy</h1>
         <h4> Social Media TestDrive <b>does not collect or store</b> any personal information.
           Young people are able to create a profile,  but all data is
           permanently deleted once users finish a module or leave the
