Updates to the team page

--- a/team.html
+++ b/team.html
@@ -78,12 +78,12 @@
       </div>
 
       <!-- Subtext -->
-      <div class="row justify-content-center">
-        <div class="col-md-6 col-lg-4 text-center teamSubtitle">
+      <div class="row justify-content-center teamRow">
+        <div class="col-sm-12 col-md-6 col-lg-4 text-center teamSubtitle">
           <h4 class="teamText">
-            Social Media TestDrive was created by a multidisciplinary team of researchers,
-            designers, and developers. We are all passionate about social media
-            and digital citizenship.
+            Social Media TestDrive was created by a multidisciplinary team of
+            researchers, designers, and developers at Cornell's Social Media
+            Lab, and a collaboration with Common Sense Education.
           </h4>
         </div>
       </div>
@@ -91,86 +91,106 @@
 
       <div class='row teamRow'>
         <h3 class="teamSubheader text-center">
-          Directors & Core Team
+          Core Team
         </h3>
       </div>
       <div class='row teamRow' style="padding-top:3em; padding-bottom:15px;">
         <div class="col-lg-6 addColumnPadding">
 
           <p class="teamText">
-            Program Director: Dr. Natalie Bazarova. Dr. Bazarova is an Associate
-            Professor in the Department of Communication and the Director of the
-            Social Media Lab at Cornell University.
+            Dr. Natalie Bazarova. Dr. Bazarova is the project co-founder and the
+            current Project Director. She is an Associate Professor in the
+            Department of Communication and the Director of the Social Media Lab
+            at Cornell University. She can be contacted at nnb8@cornell.edu.
           </p>
           <p class="teamText">
-            Program Advisor: Dr. Janis Whitlock. Dr. Whitlock is a Research
-            Scientist at Cornell's Bronfenbrenner Center for Translational
-            Research and the Director of The Cornell Research Program on
-            Self-Injury and Recovery.
+            Dr. Janis Whitlock. Dr. Whitlock is the project co-founder and
+            currently contributes to module development and evaluation
+            oversight. She is an Associate Director and a Research Scientist at
+            Cornell's Bronfenbrenner Center for Translational Research.
           </p>
           <p class="teamText">
-            Content Director and Project Manager: Dr. Yoon Hyung Choi. Dr. Choi
-            is a Postdoctoral Associate in the Department of Communication at
-            Cornell University.
+            Dr. Yoon Hyung Choi. Dr. Choi is the on-site manager for all program
+            activities and leads coordination of content development. She is a
+            Postdoctoral Associate in the Department of Communication at Cornell
+            University.
           </p>
-        </div>
-
-        <div class="col-lg-6 addColumnPadding">
           <p class="teamText">
-            Technical Director: Dr. Dominic DiFranzo. Dr. DiFranzo is an
+            Dr. Dominic DiFranzo. Dr. DiFranzo is the developer of the TestDrive
+            platform and advises the technical development team. He is an
             Assistant Professor in the Department of Computer Science &
             Engineering at Lehigh University.
           </p>
+        </div>
+        <div class="col-lg-6 addColumnPadding">
+
           <p class="teamText">
-            Evaluation Director: Amanda Purington. Ms. Purington is the Director
-            of Evaluation and Research at ACT for Youth and a graduate student
-            in the Department of Communication at Cornell University.
+            Amanda Purington. Ms. Purington contributes to content development
+            and is conducting an outcome evaluation on TestDrive as part of her
+            doctorate in Communication. She is the Director of Evaluation and
+            Research at ACT for Youth project in the Bronfenbrenner Center for
+            Translational Research and a graduate student in the Department of
+            Communication at Cornell University.
           </p>
           <p class="teamText">
-              Application Developer: Anna Spring. Ms. Spring is an Applications
-              Programmer in the Department of Communication at Cornell
-              University.
+            Anna Spring. Ms. Spring is the TestDrive application developer.
+            She is an Applications Programmer in the Department of Communication
+            at Cornell University.
+          </p>
+          <p class="teamText">
+            Dr. Dan Cosley. Dr. Cosley provides support for the design and
+            content development of the TestDrive project. Dr. Cosley is an
+            Associate Professor of Information Science at Cornell University.
+          </p>
+          <p class="teamText">
+            Ashley Shea. Ms. Shea provides support for the design and content
+            development of the TestDrive project. She is the Head of Instruction
+            Initiatives at Albert R. Mann Library at Cornell University.
           </p>
         </div>
       </div>
 
       <div class='row teamRow' style="padding-top:3em; padding-bottom:15px;">
+        <div class="col-lg-6 addColumnPadding">
+          <h3 class="teamSubheader">
+            Content Advisors
+          </h3>
+          <p class="teamText">
+            TestDrive was developed in collaboration with the Digital
+            Citizenship and Education Programs at Common Sense Education,
+            including:
+          </p>
+          <p class="teamText">
+            Eisha Buch, Director of Education Development & Programs
+            <br>
+            Kelly Mendoza, Sr. Director, Education Programs
+            <br>
+            Daniel Vargas Campos, Education Content Specialist
+          </p>
+        </div>
+
         <div class="col-lg-6 addColumnPadding">
           <h3 class="teamSubheader">
             Development and Testing of Social Media TestDrive Prototype
           </h3>
           <p class="teamText">
-            Jessie Taft, Rhoda Meador, Program for Research on Youth Development
-            and Engagement (PRYDE), Bronfenbrenner Center for Translational
-            Research, and NYS 4-H educators.
+            Natalie Bazarova, Jessie Taft, Dominic DiFranzo, Rhoda Meador,
+            Program for Research on Youth Development and Engagement (PRYDE),
+            Bronfenbrenner Center for Translational Research, and NYS 4-H
+            educators.
           </p>
         </div>
 
-        <div class="col-lg-6 addColumnPadding">
-          <h3 class="teamSubheader">
-            Website Development
-          </h3>
-          <p class="teamText">
-            Current Development: Michael Huang, Anna Spring
-          </p>
-          <p class="teamText">
-            Past Development: Nika Ablao, Carina Crabbe, Sierra Stone, Cindy Xu, Hyun Seo (Lucy)
-            Lee, and Dan Cosley.
-          </p>
 
-        </div>
       </div>
 
       <div class='row teamRow' style="padding-top:3em; padding-bottom:15px;">
         <div class="col-lg-6 addColumnPadding">
           <h3 class="teamSubheader">
-            Curriculum and Content Development
+            Website Development
           </h3>
           <p class="teamText">
-            Carmen Chan, Richa Deshpande, Danielle Freedman, Brenna Garcia,
-            Yanni Kaldis, Molly Nagel, Giesha Nunez, Alex Rauter, Emily
-            Schemerhorn, Yutong Zhou, Erin Chen, Kelly Stone, Colton Zuvich, and
-            Ashley Win.
+            Michael Huang, Anna Spring
           </p>
         </div>
 
@@ -180,10 +200,29 @@
           </h3>
           <p class="teamText">
             Social Media TestDrive is supported by the generosity of Becky and
-            Jim Morgan and National Science Foundation award #1405634.
+            Jim Morgan and National Science Foundation awards #1405634 and
+            #2006588.
+          </p>
+        </div>
+
+      </div>
+
+      <div class='row teamRow' style="padding-top:3em; padding-bottom:15px;">
+        <div class="col-lg-6 addColumnPadding">
+          <h3 class="teamSubheader">
+            Other Contributors
+          </h3>
+          <p class="teamText">
+            Nika Ablao, Carmen Chan, Erin Chen, Carina Crabbe, Richa Deshpande,
+            Danielle Freedman, Brenna Garcia, Michael Huang, Yanni Kaldis,
+            Hyun Seo Lee, Lily Lin, Philipp Masur, Katherine Miller,
+            Molly Nagel, Giesha Nunez, Annika Pinch, Alex Rauter, Emily
+            Schemerhorn, Kelly Stone, Sierra Stone, Ashley Win, Cathy Xie, Cindy
+            Xu, Tianke Zhao, Yutong Zhou, and Colton Zuvich.
           </p>
 
         </div>
+
       </div>
 
     </div>
